Opção de compra com cadastro ou login. Início da implementação de validação de formulários.

--- a/Preguicoso2/war/Preguicoso.html
+++ b/Preguicoso2/war/Preguicoso.html
@@ -96,8 +96,30 @@
 					<!-- /.dropdown -->
 				</div>
 
-				<div class="grid_2" id="login"></div>
+				<!-- Login pelo Facebook -->
 
+				<!-- 				<div id="fb-root"></div> -->
+				<!-- 				<script> -->
+				<!-- 				// window.fbAsyncInit = function() { // FB.init({ // appId : -->
+				<!-- 				'358827450794984', // status : true, // cookie : true, // xfbml : -->
+				<!-- 				true, // oauth : true, // }); // }; // (function(d) { // var js, id -->
+				<!-- 				= 'facebook-jssdk'; // if (d.getElementById(id)) { // return; // } -->
+				<!-- 				// js = d.createElement('script'); // js.id = id; // js.async = -->
+				<!-- 				true; // js.src = "//connect.facebook.net/en_US/all.js"; // -->
+				<!-- 				d.getElementsByTagName('head')[0].appendChild(js); // }(document)); -->
+				<!-- 				</script> -->
+				<!-- 				<div class="login-fb"> -->
+				<!-- 					<div class="fb-login-button" data-scope="email,user_location">Login -->
+				<!-- 						pelo Facebook</div> -->
+				<!-- 				</div> -->
+
+
+				<!-- 				<div class="fb-registration" -->
+				<!-- 					data-fields="[{'name':'name'}, {'name':'email'}, {'name':'favorite_car','description':'What is your favorite car?','type':'text'}]" -->
+				<!-- 					data-redirect-uri="http://1.preguicosotest.appspot.com/#index"></div> -->
+
+				<!-- Login pelo Preguicoso -->
+				<div class="grid_2" id="login"></div>
 			</div>
 		</div>
 	</div>
