--- a/trunk/Preguicoso2/war/Preguicoso.html
+++ b/trunk/Preguicoso2/war/Preguicoso.html
@@ -37,6 +37,25 @@
 	}); // END document.bind
 </script>
 
+<script type="text/javascript">
+  var uvOptions = {};
+  (function() {
+    var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
+    uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/nrB3pp8nMwNVw6TtuCBMNg.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
+  })();
+</script>
+
+<!--Start of Zopim Live Chat Script-->
+<script type="text/javascript">
+window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
+d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+_.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute('charset','utf-8');
+$.src='//cdn.zopim.com/?Eyh5zPQW5aB5Bhbo5Z4nTn9aAtv1f8BT';z.t=+new Date;$.
+type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
+</script>
+<!--End of Zopim Live Chat Script-->
+
 <!-- Navegação do usuario - FIM  -->
 
 
@@ -135,20 +154,22 @@
 			<div class="grid_6 howitwork">
 				<div id="receba">
 					<p>
-						Receba o pedido <br>em casa
+						Receba o pedido <br>em casa<br/><small>
+							em até 50mim
+						</small>
 					</p>
 				</div>
 				<div id="cep">
-					<p>Coloque seu CEP</p>
+					<p>Escolha Seu Bairro</p>
 				</div>
 				<div id="local">
 					<p>
-						Escolha o local<br>e o pedido que quer fazer
+						Escolha o Parceiro <br/>ou Busque pelo Item
 					</p>
 				</div>
 				<div id="pagamento">
 					<p>
-						Escolha a forma <br>de Pagamento
+						Finalize compra 
 					</p>
 				</div>
 				<a href="http://vimeo.com/33243727"><div id="video"></div></a>
@@ -163,17 +184,17 @@
 	<div class="main">
 		<div class="container_12 main" id="content">
 
-			<div class="grid_3" id="cadastroEstabelecimento"></div>
+			<div class="grid_12" id="cadastroEstabelecimento"></div>
 
-			<div class="grid_9" id="mainConteiner">
-				<div class="grid_9 filtro" id="searchFieldDiv"></div>
-				<div class="grid_9 filtro" id="busca"></div>
+			<div class="grid_12" id="mainConteiner">
+				<div class="grid_12 filtro" id="searchFieldDiv"></div>
+				<div class="grid_12 filtro" id="busca"></div>
 			</div>
 		</div>
 	</div>
 	<div class="clear"></div>
 	<div class="rodape">
-		<div class="container_12 rodape_midia">
+		<div class="container_12 rodape_midia" style="display:none">
 			<div id="titulo">
 				<h2>PREGUIÇOSO NA MIDIA</h2>
 			</div>
